Proper invoice handling
